# isomagic

./: .gitignore  Cargo.toml  readme.md
src/: depth.rs  enums.rs  main.rs
